add choose date to report page, add admin profile

--- a/public/css/c1.css
+++ b/public/css/c1.css
@@ -156,6 +156,6 @@ a:hover{
     border-color: transparent transparent #DDDDDD !important;   
 }
 
-.nav-link:hover {
+#nav-tab .nav-link:hover {
     border-bottom: 1px solid #DDDDDD !important;
 }
