--- a/public/partials/handlebars-navbar-admin-partial.html
+++ b/public/partials/handlebars-navbar-admin-partial.html
@@ -21,7 +21,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link position-relative" href="b3_profile_history.html">
+                        <a class="nav-link position-relative" href="c4_profile-admin.html">
                             <img id="user-avatar" class="position-absolute p-auto" style="max-height: 100%; transform: translateY(-50%); top:50%" src={{{avatarlink}}}>
                             <p style="display: inline; padding-left:46px" id="username-navbar">{{name}}</p>
                         </a>
@@ -31,7 +31,7 @@
                             <button type="button" class="btn dropdown-toggle align-items-center" data-toggle="dropdown">
                             </button>
                             <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" href="c4_profile-admin.html">Profile</a>
                                 <a class="dropdown-item" href="#">Help</a>
                                 <a class="dropdown-item" href="#">Log out</a>
                             </div>
