--- a/public/css/a3.css
+++ b/public/css/a3.css
@@ -1,3 +1,11 @@
+h4{
+    font-size: 20px !important;
+}
+
+h5{
+    font-size: 16px !important;
+}
+
 .a3-container {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -15,7 +23,7 @@
     margin: 24px !important;
     margin-bottom: 10px !important;
     margin-top: 10px !important;
-    font-size: 36px !important;
+    font-size: 30px !important;
 }
 
 
