--- a/public/css/c3.css
+++ b/public/css/c3.css
@@ -1,39 +1,41 @@
-.container-fluid-custom{
+.container-fluid-custom {
     padding: 20px;
     padding-left: 4%;
     padding-right: 4%;
 }
 
-#search-table-result{
-    padding:0 !important;
+#search-table-result {
+    padding: 0 !important;
 }
 
-#search-table-result .row{
-    margin:0 !important;
+#search-table-result .row {
+    margin: 0 !important;
 }
 
-.c3-img{
+.c3-img {
     width: 100% !important;
     height: 24% !important;
     border-radius: 5px;
     margin-bottom: 6px;
 
-    
+
 
     -webkit-filter: brightness(0.70);
     filter: brightness(0.70);
 }
 
-.nav{
+.nav {
     margin-top: 10px;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
     border-color: transparent transparent #f3f3f3;
     border-bottom: 3px solid !important;
     font-size: 16px;
-    
+
 }
+
 a.nav-link {
     border: 1px solid transparent;
     border-top-left-radius: .25rem;
@@ -46,81 +48,95 @@ a.nav-link {
     border: transparent !important;
 }
 
-a{
+a {
     text-decoration: none;
     color: #999999;
-   
+
 }
 
-.block-center{
+.block-center {
     height: 100%;
     margin-left: 0px;
 }
 
-.c3-form{
+.c3-form {
     background-color: white;
     border: 1px solid #494949;
     border-radius: 5px;
     padding: 10px 10px !important;
-    z-index: 10;
 }
 
-#date{
+#date {
     color: #999999;
     font-weight: lighter;
     font-size: 16px;
 }
+#admin-name{
+    
+    font-size: 18px !important;
+}
 
-.block-right{
-   /* margin-left: 10px;*/
+
+.block-right {
+    /* margin-left: 10px;*/
     height: 100%;
 
 }
 
-#name-ad{
-    
+#name-ad {
+
     position: relative;
     display: inline-block;
     width: 100%;
     padding-bottom: 11% !important;
 }
-.name-ad-info{
+
+.name-ad-info {
     position: absolute;
-    width: 100%; 
+    width: 100%;
     top: 15%;
     left: 5%;
 }
+.icon-change-date{
+    position: absolute;
+    width: 100%;
+    top: 30%;
+    left: 90%;
+    font-size: 30px;
+    z-index: 10 !important;
+}
 
-#revenue{
+
+#revenue {
     padding-bottom: 50% !important;
     position: relative;
     display: inline-block;
     width: 100%;
 }
 
-#chart_col{
+#chart_col {
     position: absolute;
-    left: 0.5%; 
+    left: 0.5%;
     top: 15%;
-    width: 99%; 
+    width: 99%;
 }
 
-#num-of-booking{
+#num-of-booking {
     padding-bottom: 50% !important;
     position: relative;
     display: inline-block;
     width: 100%;
 }
 
-#chart_line{
+#chart_line {
     position: absolute;
-    left: 0.5%; 
+    left: 0.5%;
     top: 15%;
-    width: 99%; 
+    width: 99%;
 }
 
 #user-visit-book,
-#bus-type{
+#bus-type {
     padding-bottom: 30% !important;
     position: relative;
     display: inline-block;
@@ -128,40 +144,43 @@ a{
 }
 
 
-#bus-route{
+#bus-route {
     padding-bottom: 46% !important;
     position: relative;
     display: inline-block;
     width: 100%;
 }
 
-.info-chart{
-    position: absolute; 
+.info-chart {
+    position: absolute;
     top: 25%;
-    right: 5%;;
+    right: 5%;
+    ;
     width: 100%;
 }
 
 #chart_donut,
-#chart_bustype{
+#chart_bustype {
     position: absolute;
     height: 130% !important;
     width: 70% !important;
     margin-top: -7%;
 }
-#chart_busroute{
+
+#chart_busroute {
     width: 113%;
     height: 90%;
     margin: 0 !important;
     margin-left: -5% !important;
     position: absolute;
 }
-#paddingbot{
+
+#paddingbot {
     padding-bottom: 5%;
 
 }
 
-#donut-value{
+#donut-value {
     position: absolute;
     left: 22%;
     top: 39%;
@@ -169,7 +188,8 @@ a{
     color: #D70303;
     font-weight: bold;
 }
-#bus-type-value{
+
+#bus-type-value {
     position: absolute;
     left: 18%;
     top: 40%;
@@ -178,14 +198,14 @@ a{
 
 }
 
-.box{
+.box {
     position: relative;
-   
+
 }
-.box .text{
+
+.box .text {
     color: white;
     position: absolute;
-    z-index: 999;
     left: 5%;
     bottom: -5px;
 }
@@ -193,57 +213,59 @@ a{
 #num-signup,
 #num-sale,
 #num-visit,
-#num-revenue{
+#num-revenue {
     font-size: 24px;
 }
 
-.col-lg-2 a:hover{
-    -webkit-filter: blur(1px); /* Safari 6.0 - 9.0 */
+.col-lg-2 a:hover {
+    -webkit-filter: blur(1px);
+    /* Safari 6.0 - 9.0 */
     filter: blur(1px);
 
-    -webkit-filter: saturate(7); 
+    -webkit-filter: saturate(7);
     filter: saturate(7);
 
 }
 
-.title-donut{
+.title-donut {
     font-size: 18px;
     margin-left: 50%;
 }
 
-.title-chart{
+.title-chart {
     font-size: 18px;
     border-bottom: 1px solid #494949;
     position: absolute;
     width: 95%;
 }
 
-.subtitle-donut,.btn-primary{
+.subtitle-donut,
+.btn-primary {
     font-size: 14px;
     margin-left: 50%;
     color: #999999;
     margin-bottom: 3px;
 }
 
-.btn-primary{
+.btn-primary {
     font-size: 12px !important;
     color: white !important;
     padding-top: 2px !important;
     padding-bottom: 2px !important;
 }
 
-.c3-my-select{
+.c3-my-select {
     outline: none !important;
     color: #D70303 !important;
     border: #D70303 solid 1px !important;
     background: none;
     width: 170px !important;
-    height : 2.5rem !important;
+    height: 2.5rem !important;
     padding: 4px 8px !important;
     border-radius: 5px !important;
 }
 
-.c3-my-select:focus{
+.c3-my-select:focus {
     outline: none !important;
     border: inherit solid 1px !important;
     background: #D70303 !important;
@@ -251,7 +273,7 @@ a{
     box-shadow: none !important;
 }
 
-.c3-my-select .c3-my-option{
+.c3-my-select .c3-my-option {
     background-color: white !important;
     color: #494949 !important;
     height: 40px !important;
@@ -261,7 +283,7 @@ a{
     padding: 4px 6px !important;
 }
 
-.c3-my-select .c3-my-option:hover{
+.c3-my-select .c3-my-option:hover {
     box-shadow: none !important;
     background-color: white !important;
     color: #D70303 !important;
@@ -271,6 +293,30 @@ select.decorated option:hover {
     box-shadow: none;
 }
 
-select.form-control{
-  height:auto !important;
+select.form-control {
+    height: auto !important;
+}
+
+.datepicker {
+    z-index: 1151 !important;
+}
+
+#myModal{
+    width: 50% !important;
+    position: absolute;
+    left: 50%;
+    top: 65%;
+    transform: translate(-50%, -50%);
+}
+
+#title-date-choose{
+    font-size: 20px;
+}
+
+#ok-btn{
+    margin-top: 5% !important;
+    margin-right: 12% !important;
+}
+#datetoID,#datefromID{
+    font-size: 16px !important;
 }
