--- a/public/partials/handlebars-search-result-partial.html
+++ b/public/partials/handlebars-search-result-partial.html
@@ -758,7 +758,7 @@
                     <h2 class="text-right text-primary mr-5 mb-4">10:00</h2>
                     <div class="container">
                         <div class="row">
-                            <div class="col-5 ml-3">
+                            <div class="col-5 ajust">
                                 <p class="label p-0 m-0 text-left">Full name</p>Lê Thành Công
                                 <p class="label p-0 m-0 text-left">Phone</p>0123456789
                                 <p class="label p-0  m-0 text-left">Email</p>1612898@student.hcmus.edu.vn
