change c3_report.html into admin.html

--- a/public/css/c1.css
+++ b/public/css/c1.css
@@ -159,3 +159,7 @@ a:hover{
 #nav-tab .nav-link:hover {
     border-bottom: 1px solid #DDDDDD !important;
 }
+
+#nav-tab .nav-link.active{
+    border-bottom: 3px solid #494949 !important;
+}
