--- a/public/partials/handlebars-navbar-admin-partial.html
+++ b/public/partials/handlebars-navbar-admin-partial.html
@@ -1,6 +1,6 @@
 <script id="navbar-admin-detail-template" type="text/x-handlebars-template">
     <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light admin-navbar" id="my-navbar">
-            <a class="navbar-brand" href="index.html"><img id="homeLogo" src="/img/Logo/white.png" alt=""></a>
+            <a class="navbar-brand" href="admin.html"><img id="homeLogo" src="/img/Logo/white.png" alt=""></a>
             <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
                 aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
