--- a/public/partials/handlebars-navbar-admin-partial.html
+++ b/public/partials/handlebars-navbar-admin-partial.html
@@ -1,6 +1,6 @@
 <script id="navbar-admin-detail-template" type="text/x-handlebars-template">
     <nav class="navbar sticky-top navbar-light bg-light admin-navbar" id="my-navbar">
-            <a class="navbar-brand" href="index.html"><img id="homeLogo" src="/img/Logo/white.png" alt=""></a>
+            <a class="navbar-brand" href="admin.html"><img id="homeLogo" src="/img/Logo/white.png" alt=""></a>
          
             <div class="collapse my-navbar-collapse"  id="collapsibleNavId">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0 flex-row">
