--- a/public/partials/handlebars-searchform-partial.html
+++ b/public/partials/handlebars-searchform-partial.html
@@ -38,8 +38,8 @@
             <div class="col-md-3 col-sm-4">
                     <div class="input-date m-0">
                             <!-- <label class="form-check-label" for="bday">Departure Day</label> -->
-                            <input placeholder="Departure Day" id="searchform-departureday" type="text"
-                                class="datepicker-here my-date-time-picker form-control" data-language='en' data-position='bottom right' />
+                            <input placeholder="Redturn Day" id="searchform-returnday" type="text"
+                                class="datepicker-here my-date-time-picker form-control" data-language='en' data-position='bottom right' disabled/>
                             <i class="far fa-calendar-alt icon-date m-auto"></i>
                         </div>
             </div>
