update sequelize and handlebars

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -10,10 +10,10 @@
          <div class="col-6">
              <nav>
                  <div class="nav nav-tabs a2-nav-link nav-fill" id="nav-tab" role="tablist">
-                     <a class="nav-item nav-link a2-nav-link " id="nav-home-tab" href="c1_master-data.html">Master
+                     <a class="nav-item nav-link a2-nav-link " id="nav-home-tab" href="/masterdata">Master
                          Data</a>
                      <a class="nav-item nav-link a2-nav-link" id="nav-profile-tab"
-                         href="c2_transaction.html">Transaction</a>
+                         href="/transaction">Transaction</a>
                      <a class="nav-item nav-link a2-nav-link active" id="nav-contact-tab" href="#">Report</a>
                  </div>
              </nav>
