--- a/views/login.hbs
+++ b/views/login.hbs
@@ -30,10 +30,10 @@
 
             <div class="col-lg-5 col-md-8 col-sm-10 b1-form">
                 <div class="b1-title-left">
-                   <a href="b2_sign-up.html">Sign up</a>
+                   <a href="/signup">Sign up</a>
                 </div>
                 <div class="b1-title-right">
-                    <a href="b1_log-in.html">Log in</a>
+                    <a href="/login">Log in</a>
 
                 </div>
                 <div class="b1-current"></div>
