--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,61 +1,25 @@
+<title>XeBooking</title>
+<link rel="icon" href="img/Logo/icon.png">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/a1.css">
+<!-- font awsome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+<link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
+
+
+
+
+
 <div class="container-fluid bg-1 text-center" id="a1-div-form">
     <h1>BOOK BUS TICKET</h1>
 
     <span id="searchform-container" class="d-flex align-content-centera justify-content-center">
+        {{> searchformPartial}}
 
-        <div class="container justify-content-center align-content-center" id="searchform">
-            <div class="row">
-                <div class="col-md-1 col-sm-0 "></div>
-                <div class="col-lg-2 col-md-3 col-sm-6 text-center">
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="my-control-input custom-control-input" id="customRadio-OneWay"
-                            name="searchform-type-trip" value="1" checked>
-                        <label class="custom-control-label" for="customRadio-OneWay">One Way</label>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-6 ">
-                    <div class="custom-control custom-radio custom-control-inline">
-                        <input type="radio" class="my-control-input custom-control-input" id="customRadio-RoundTrip"
-                            name="searchform-type-trip" value="2">
-                        <label class="custom-control-label" for="customRadio-RoundTrip">Round Trip</label>
-                    </div>
-                    <br>
-                </div>
-            </div>
-            <div id="searchform-row-div-form" class="row align-items-center justify-content-center">
-                <div class="col-md-2 col-sm-4 mb-3">
-                    <input type="text" class="form-control-plaintext control-inline my-inpyt-text" placeholder="From">
-                </div>
-                <i style="margin:auto 2px" class="fas fa-exchange-alt" aria-hidden="true"></i>
-                <div class="col-md-2 col-sm-4">
-                    <input type="text" class="form-control-plaintext control-inline my-inpyt-text" placeholder="To">
-                </div>
-                <div class="col-md-3 col-sm-4">
-                    <div class="input-date m-0">
-                        <!-- <label class="form-check-label" for="bday">Departure Day</label> -->
-                        <input placeholder="Departure Day" id="searchform-departureday" type="text"
-                            class="datepicker-here my-date-time-picker form-control" data-language='en'
-                            data-position='bottom right' />
-                        <i class="far fa-calendar-alt icon-date m-auto"></i>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-4">
-                    <div class="input-date m-0">
-                        <!-- <label class="form-check-label" for="bday">Departure Day</label> -->
-                        <input placeholder="Redturn Day" id="searchform-returnday" type="text"
-                            class="datepicker-here my-date-time-picker form-control" data-language='en'
-                            data-position='bottom right' disabled />
-                        <i class="far fa-calendar-alt icon-date m-auto"></i>
-                    </div>
-                </div>
-                <div class="col-lg-1 col-m-2 col-sm-5 d-flex justify-content-center">
-                    <a name="" id="searchform-search-button" class="btn btn-primary" href="a2-detail.html"
-                        role="button">Search</a>
-                </div>
-            </div>
-
-
-        </div>
     </span>
 
 </div>
@@ -148,6 +112,10 @@
 
 <script src="js/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="js/handlebars-v4.1.2.js"></script>
 <script src="js/a1.js"></script>
+<script src="js/nav-guess-input.js"></script>
+<script src="js/searchform.js"></script>
 <script src="dist/js/datepicker.min.js"></script>
 <script src="dist/js/i18n/datepicker.en.js"></script>
+<script src="js/footer.js"></script>
