--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,11 +13,10 @@
 
 
 
-
 <div class="container-fluid bg-1 text-center" id="a1-div-form">
     <h1>BOOK BUS TICKET</h1>
-
-    <span id="searchform-container" class="d-flex align-content-centera justify-content-center">
+    
+    <span id="searchform-container" class="d-flex align-content-centera justify-content-center" data-station="{{#each stations}}{{ten}};{{/each}}">
         {{> searchformPartial}}
 
     </span>
@@ -115,7 +114,7 @@
 <script src="js/handlebars-v4.1.2.js"></script>
 <script src="js/a1.js"></script>
 <script src="js/nav-guess-input.js"></script>
-<script src="js/searchform.js"></script>
+{{!-- <script src="js/searchform.js"></script> --}}
 <script src="dist/js/datepicker.min.js"></script>
 <script src="dist/js/i18n/datepicker.en.js"></script>
 <script src="js/footer.js"></script>
