--- a/views/partials/userHistoryPartial.hbs
+++ b/views/partials/userHistoryPartial.hbs
@@ -37,7 +37,7 @@
 
             <ul class="pagination d-flex justify-content-center mt-auto">
                     <li class="page-item"><a class="page-link" href="#">
-                                    <</a> </li> <li class="page-item"><a class="page-link 1 active" href="#">1</a></li>
+                                    </a> </li> <li class="page-item"><a class="page-link 1 active" href="#">1</a></li>
                     <li class="page-item"><a class="page-link 2" href="#">2</a></li>
                     <li class="page-item"><a class="page-link 3" href="#">3</a></li>
                     <li class="page-item"><a class="page-link" href="#">></a></li>
