--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -21,14 +21,24 @@
     {{>header}}
     {{{body}}}
     {{>footer}}
+
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/handlebars-v4.1.2.js"></script>
+    <script src="dist/js/datepicker.min.js"></script>
+    <script src="dist/js/i18n/datepicker.en.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(() => {
+            $("#search-toggle").on('click', function () {
+                $("#search-bar").toggle("slide");
+            });
+        })
+
+    </script>
+
 </body>
 
-<script>
-    $(document).ready(() => {
-        $("#search-toggle").on('click', function () {
-            $("#search-bar").toggle("slide");
-        });
-    })
 
-</script>
 </html>
