update login, sign up

--- a/public/css/b1.css
+++ b/public/css/b1.css
@@ -78,7 +78,7 @@ input[type=password]{
 
 }
 
-#IDemail{
+#email{
     background: url('../img//icon/baseline-email-24px.svg') no-repeat scroll 10px; 
 }
 
