--- a/views/partials/searchformPartial.hbs
+++ b/views/partials/searchformPartial.hbs
@@ -39,7 +39,7 @@
         <div class="col-md-3 col-sm-4">
             <div class="input-date m-0">
                 <!-- <label class="form-check-label" for="bday">Departure Day</label> -->
-                <input placeholder="Redturn Day" id="searchform-returnday" type="text"
+                <input placeholder="Return Day" id="searchform-returnday" type="text"
                     class="datepicker-here my-date-time-picker form-control" data-language='en'
                     data-position='bottom right' disabled />
                 <i class="far fa-calendar-alt icon-date m-auto"></i>
