--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,9 +1,9 @@
- <link rel="stylesheet" href="css/main.css">
- <link rel="stylesheet" href="css/style.css">
- <link rel="stylesheet" href="css/a1.css">
- <link rel="stylesheet" href="css/c1.css">
- <link rel="stylesheet" href="css/c3.css">
- <link rel="stylesheet" href="css/a2.css">
+ <link rel="stylesheet" href="/css/main.css">
+ <link rel="stylesheet" href="/css/style.css">
+ <link rel="stylesheet" href="/css/a1.css">
+ <link rel="stylesheet" href="/css/c1.css">
+ <link rel="stylesheet" href="/css/c3.css">
+ <link rel="stylesheet" href="/css/a2.css">
 
  <div class="container ">
      <div class="row justify-content-center align-content-center">
@@ -40,7 +40,7 @@
              <div class="row">
                  <div class="col-lg-2">
                      <a href="" id="sign-ups" class="box">
-                         <img class="c3-img" src="img/C3/1.jpg" alt="">
+                         <img class="c3-img" src="/img/C3/1.jpg" alt="">
                          <div class="text">
                              <div id="num-signup">100.000</div>
                              Online signups
@@ -48,21 +48,21 @@
                      </a>
 
                      <a href="" id="new-visitors" class="box">
-                         <img class="c3-img" src="img/C3/3.jpg" alt="">
+                         <img class="c3-img" src="/img/C3/3.jpg" alt="">
                          <div class="text">
                              <div id="num-visit">100.000</div>
                              Number of visitors
                          </div>
                      </a>
                      <a href="" id="last-month-sales" class="box">
-                         <img class="c3-img" src="img/C3/2.jpg" alt="">
+                         <img class="c3-img" src="/img/C3/2.jpg" alt="">
                          <div class="text">
                              <div id="num-sale">100.000</div>
                              Total of bookings
                          </div>
                      </a>
                      <a href="" id="total-revenue-month" class="box">
-                         <img class="c3-img" src="img/C3/4.jpg" alt="">
+                         <img class="c3-img" src="/img/C3/4.jpg" alt="">
                          <div class="text">
                              <div id="num-revenue">$100.000</div>
                              Total revenue
@@ -104,7 +104,7 @@
 
                              <div class="title-donut">Users visit then book bus</div>
                              <div class="subtitle-donut">Calculated from May 1st, 2019 to Now</div>
-                             <a href="#" class="btn btn-primary" role="button" data-toggle="modal"
+                             <a href="#" class="btn btn-primary" id="refresh" role="button" data-toggle="modal"
                                  data-target="#myModal">REFRESH</a>
                          </div>
 
@@ -117,7 +117,7 @@
                          <div class="info-chart">
                              <div class="title-donut">Bus type used most</div>
                              <div class="subtitle-donut">Calculated from May 1st, 2019 to Now</div>
-                             <a href="#" class="btn btn-primary" role="button" data-toggle="modal"
+                             <a href="#" class="btn btn-primary" id="refresh" role="button" data-toggle="modal"
                                  data-target="#myModal">REFRESH</a>
                          </div>
                      </div>
@@ -192,20 +192,20 @@
  </div>
 
 
- <script src="js/jquery.min.js"></script>
+ <script src="/js/jquery.min.js"></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 
- <script src="js/handlebars-v4.1.2.js"></script>
- <script src="js/nav-admin-input.js"></script>
- <script src="js/a1.js"></script>
- <script src="js/b3.js"></script>
+ <script src="/js/handlebars-v4.1.2.js"></script>
+ <script src="/js/nav-admin-input.js"></script>
+ <script src="/js/a1.js"></script>
+ <script src="/js/b3.js"></script>
 
- <script src="js/c3.js"></script>
+ <script src="/js/c3.js"></script>
 
  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
- <link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
- <script src="dist/js/datepicker.min.js"></script>
+ <link href="/dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
+ <script src="/dist/js/datepicker.min.js"></script>
  <!-- Include English language -->
- <script src="dist/js/i18n/datepicker.en.js"></script>
+ <script src="/dist/js/i18n/datepicker.en.js"></script>
