--- a/views/partials/navbarAdminPartial.hbs
+++ b/views/partials/navbarAdminPartial.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar sticky-top navbar-light bg-light admin-navbar" id="my-navbar">
-    <a class="navbar-brand" href="admin.html"><img id="homeLogo" src="/img/Logo/white.png" alt=""></a>
+    <a class="navbar-brand" href="/users/admin"><img id="homeLogo" src="/img/Logo/white.png" alt=""></a>
 
     <div class="collapse my-navbar-collapse" id="collapsibleNavId">
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0 flex-row">
@@ -17,10 +17,10 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link position-relative" href="c4_profile-admin.html">
+                <a class="nav-link position-relative" href="/profile">
                     <img id="user-avatar" class="position-absolute p-auto"
-                        style="max-height: 100%; transform: translateY(-50%); top:50%" src={{{avatarlink}}}>
-                    <p style="display: inline; padding-left:46px" id="username-navbar">{{name}}</p>
+                        style="max-height: 100%; transform: translateY(-50%); top:50%" src={{{user.imagePath}}}>
+                    <p style="display: inline; padding-left:46px" id="username-navbar">{{user.name}}</p>
                 </a>
             </li>
 
@@ -30,9 +30,9 @@
                 </button>
 
                 <div class="dropdown-menu dropdown-menu-right">
-                    <a class="dropdown-item" href="c4_profile-admin.html">Profile</a>
+                    <a class="dropdown-item" href="/profile">Profile</a>
                     <a class="dropdown-item" href="#">Help</a>
-                    <a class="dropdown-item" href="#">Log out</a>
+                    <a class="dropdown-item" href="/users/logout">Log out</a>
                 </div>
             </li>
         </ul>
