--- a/views/partials/navbarGuessPartial.hbs
+++ b/views/partials/navbarGuessPartial.hbs
@@ -1,5 +1,5 @@
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light" id="my-navbar">
-        <a class="navbar-brand" href="/"><img id="homeLogo" src="img/Logo/black.png" alt=""></a>
+        <a class="navbar-brand" href="/"><img id="homeLogo" src="/img/Logo/black.png" alt=""></a>
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
             aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/contact">Contact us</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a name="" id="" class="btn btn-outline-secondary" href="/signup" role="button">Sign up</a>
+                    <a name="" id="" class="btn btn-outline-secondary" href="/users/signup" role="button">Sign up</a>
                 </li>
             </ul>
         </div>
