--- a/views/partials/navbarUserPartial.hbs
+++ b/views/partials/navbarUserPartial.hbs
@@ -1,5 +1,5 @@
     <nav class="navbar sticky-top  navbar-light bg-light" id="my-navbar">
-            <a class="navbar-brand" href="index.html"><img id="homeLogo" src="img/Logo/black.png" alt=""></a>
+            <a class="navbar-brand" href="/"><img id="homeLogo" src="/img/Logo/black.png" alt=""></a>
             <div class="my-navbar-collapse float-right"  id=" ">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0 flex-row">
                     <li class="nav-item d-flex align-content-center justify-content-center align-items-center">
@@ -16,12 +16,12 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="a3_contact-us.html">Contact us</a>
+                        <a class="nav-link" href="/contact">Contact us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link position-relative" href="b3_profile_history.html">
-                            <img id="user-avatar" class="position-absolute p-auto" style="max-height: 100%; transform: translateY(-50%); top:50%" src={{{avatarlink}}}>
-                            <p style="display: inline; padding-left:46px" id="username-navbar">{{name}}</p>
+                        <a class="nav-link position-relative" href="/profile">
+                            <img id="user-avatar" class="position-absolute p-auto" style="max-height: 100%; transform: translateY(-50%); top:50%" src={{{user.imagePath}}}>
+                            <p style="display: inline; padding-left:46px" id="username-navbar">{{user.name}}</p>
                         </a>
                     </li>
 
@@ -29,9 +29,9 @@
                             <button type="button" class="btn dropdown-toggle align-items-center" data-toggle="dropdown" style="padding-top:8px !important; width:32px !important;">
                             </button>
                             <div class="dropdown-menu dropdown-menu-right position-absolute">
-                                <a class="dropdown-item" href="#">Profile</a>
+                                <a class="dropdown-item" href="/profile">Profile</a>
                                 <a class="dropdown-item" href="#">Help</a>
-                                <a class="dropdown-item" href="#">Log out</a>
+                                <a class="dropdown-item" href="/users/logout">Log out</a>
                             </div>
                     </li>
                 </ul>
