--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/a1.css">
-<link rel="stylesheet" href="css/b1.css">
-<link rel="stylesheet" href="css/b2.css">
+<link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/a1.css">
+<link rel="stylesheet" href="/css/b1.css">
+<link rel="stylesheet" href="/css/b2.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
 <!-- font awsome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -11,27 +11,46 @@
 
 
 
-<a href="index.html"><img src="img/Logo/black.png" class="logo-login" alt=""></a>
+<a href="/"><img src="/img/Logo/black.png" class="logo-login" alt=""></a>
 
 <div class="container">
     <div class="row justify-content-center align-content-center">
 
         <div class="col-lg-5 col-md-8 col-sm-10 b1-form">
             <div class="b1-title-left">
-                <a href="/signup">Sign up</a>
+                <a href="/users/signup">Sign up</a>
             </div>
             <div class="b1-title-right">
-                <a href="/login">Log in</a>
+                <a href="/users/login">Log in</a>
             </div>
             <div class="b1-current"></div>
             <div class="b1-line"></div>
 
             <div class="container">
-                <form action="b3_profile_history.html">
-                    <input type="text" placeholder="Your username or email" name="uname" required>
+                <form role="form" method="POST" action="/users/signup">
 
-                    <input type="text" placeholder="Your email" id="IDemail" name="email" required>
-                    <input type="password" placeholder="Your password" name="psw" required>
+                    {{#if error }}
+                    <div class="form-control-feedback alert alert-danger ">
+                        <span class="align-middle">
+                            {{error}}
+                        </span>
+                    </div>
+                    {{/if}}
+                    {{#if errors}}
+                    <div class="form-control-feedback alert alert-danger ">
+                        <ul>
+                            {{#each errors}}
+                            <li>{{msg}}</li>
+                            {{/each}}
+                        </ul>
+                    </div>
+                    {{/if}}
+
+                    <input type="text" placeholder="Your full name" id="name" name="name" autocomplete="off" required autofocus>
+
+                    <input type="text" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                    placeholder="Your email" id="email" name="email" autocomplete="off" required autofocus>
+                    <input type="password" placeholder="Your password" id="password" autocomplete="off"  name="password" required>
 
                     <button type="submit" class="btn btn-primary btn-custom">Sign up</button>
 
@@ -48,7 +67,7 @@
                 <div class="row align-content-center justify-content-center">
                     <div class="col-5">
                         <a class="icon-left" href="">
-                            <img id="icon-fb" src="img/Logo/logo-fb.png" alt="">
+                            <img id="icon-fb" src="/img/Logo/logo-fb.png" alt="">
                         </a>
 
 
@@ -58,7 +77,7 @@
                     </div>
                     <div class="col-5">
                         <a class="icon-right" href="">
-                            <img id="icon-gg" src="img/Logo/logo-google.png" alt="">
+                            <img id="icon-gg" src="/img/Logo/logo-google.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -69,5 +88,5 @@
     </div>
 </div>
 
-<script src="js/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
