--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -3,6 +3,13 @@
 <link rel="stylesheet" href="css/a1.css">
 <link rel="stylesheet" href="css/a3.css">
 
+
+{{#if message}}
+<div class="alert alert-info container text-center">
+    {{message}}
+</div>
+{{/if}}
+
 <div class="container-fluid a3-container">
     <div class="container">
         <div class="row">
@@ -37,20 +44,20 @@
             </div>
             <div class="col-md-1 col-sm-0"></div>
             <div class="col-md-6 col-sm-12 panel-right a3-form">
-                <form action="">
+                <form action="/message" method="POST">
 
                     <h4>Full name</h4>
                     <input type="text" name="name" placeholder="Your Name" />
                     <br>
                     <h4>Email</h4>
-                    <input type="email" name="e-mail" placeholder="Your E-mail Address" />
+                    <input type="email" name="email" placeholder="Your E-mail Address" />
                     <h4>Phone number</h4>
                     <input type="tel" name="phone" placeholder="Your Phone Number" />
                     <br>
                     <h4>What are you concerned about?</h4>
-                    <textarea name="text" id="" rows="5" placeholder="Your Message"></textarea>
+                    <textarea name="message" id="" rows="5" placeholder="Your Message"></textarea>
                     <br>
-                    <button class="btn btn-primary">Send</button>
+                    <button class="btn btn-primary" type="submit">Send</button>
                 </form>
             </div>
         </div>
