--- a/views/masterdata.hbs
+++ b/views/masterdata.hbs
@@ -1,9 +1,9 @@
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/a2.css">
-<link rel="stylesheet" href="css/a1.css">
-<link rel="stylesheet" href="css/c3.css">
-<link rel="stylesheet" href="css/c1.css">
+<link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/a2.css">
+<link rel="stylesheet" href="/css/a1.css">
+<link rel="stylesheet" href="/css/c3.css">
+<link rel="stylesheet" href="/css/c1.css">
 <!-- font awsome -->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -49,9 +49,9 @@
                                 <span class="sr-only">Toggle Dropdown</span>
                             </button>
                             <div class="dropdown-menu dropdown-menu-right"">
-                                    <a class=" dropdown-item" href="c1_master-data.html">Booking database</a>
+                                    <a class=" dropdown-item" href="/users/masterdata">Booking database</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="c1_master-data-employee.html">Employee database</a>
+                                <a class="dropdown-item" href="/users/masterdata">Employee database</a>
                             </div>
                         </div>
 
@@ -160,20 +160,20 @@
 
 
 
-<script src="js/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
     integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous">
 </script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
-<script src="js/handlebars-v4.1.2.js"></script>
-<script src="js/a1.js"></script>
-<script src="js/b3.js"></script>
-<script src="js/nav-admin-input.js"></script>
+<script src="/js/handlebars-v4.1.2.js"></script>
+<script src="/js/a1.js"></script>
+<script src="/js/b3.js"></script>
+<script src="/js/nav-admin-input.js"></script>
 
-<link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
-<script src="dist/js/datepicker.min.js"></script>
+<link href="/dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
+<script src="/dist/js/datepicker.min.js"></script>
 <!-- Include English language -->
-<script src="dist/js/i18n/datepicker.en.js"></script>
-<script src="js/a2.js"></script>
-<script src="js/master-data.js"></script>
+<script src="/dist/js/i18n/datepicker.en.js"></script>
+<script src="/js/a2.js"></script>
+<script src="/js/master-data.js"></script>
