--- a/views/transaction.hbs
+++ b/views/transaction.hbs
@@ -1,11 +1,11 @@
-<link rel="stylesheet" href="css/main.css">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/a1.css">
-<link rel="stylesheet" href="css/a2.css">
-<link rel="stylesheet" href="css/c3.css">
+<link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/a1.css">
+<link rel="stylesheet" href="/css/a2.css">
+<link rel="stylesheet" href="/css/c3.css">
 
 
-<link rel="stylesheet" href="css/c1.css">
+<link rel="stylesheet" href="/css/c1.css">
 
 
 <!-- font awsome -->
@@ -143,12 +143,12 @@
 </div>
 
 
-<script src="js/jquery.min.js"></script>
+<script src="/js/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="js/handlebars-v4.1.2.js"></script>
-<script src="js/nav-admin-input.js"></script>
-<script src="js/transaction.js"></script>
-<link href="dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
-<script src="dist/js/datepicker.min.js"></script>
+<script src="/js/handlebars-v4.1.2.js"></script>
+<script src="/js/nav-admin-input.js"></script>
+<script src="/js/transaction.js"></script>
+<link href="/dist/css/datepicker.min.css" rel="stylesheet" type="text/css">
+<script src="/dist/js/datepicker.min.js"></script>
 <!-- Include English language -->
-<script src="dist/js/i18n/datepicker.en.js"></script>
+<script src="/dist/js/i18n/datepicker.en.js"></script>
